plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.10'
}

version '1.0'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    // https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit
    compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '2.2.0.201212191850-r'
    // Todo: Update to newest gradle version
    //compile group: 'org.eclipse.jgit', name: 'org.eclipse.jgit', version: '5.5.0.2019091s10433-r'
    //implementation files('libs/PluginHelper-Core.jar')
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.2.2'
}
patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}